--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ julia:
   - 0.6
   - nightly
 
+git:
+  depth: 999999
+
 notifications:
   email: false
 
@@ -16,8 +19,5 @@ script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
   - julia -e 'Pkg.clone(pwd()); Pkg.build("celerite"); Pkg.test("celerite"; coverage=true)'
 
-# after_success:
-#   # push coverage results to Coveralls
-#   - julia -e 'cd(Pkg.dir("GenRP")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
-#   # push coverage results to Codecov
-#   - julia -e 'cd(Pkg.dir("GenRP")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+after_success:
+  - julia -e 'cd(Pkg.dir("celerite")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder()); Codecov.submit(process_folder())'
